# modern-cpp-course-project

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  doxygen.cfg  run-clang-tidy.py
include/: List.hpp  Node.hpp  OrderedList.hpp  SentinelNode.hpp  UnorderedList.hpp
include/impl/: List.i.hpp  Node.i.hpp  OrderedList.i.hpp  SentinelNode.i.hpp  UnorderedList.i.hpp
lib/: catch.hpp
test/: Test.cpp
